NE-1444/destca-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ne1444-test
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ne1444-test
  template:
    metadata:
      labels:
        app: ne1444-test
    spec:
      containers:
      - name: ne1444-test
        image: quay.io/amcdermo/ne1444/server
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 8443
          protocol: TCP
          name: "https"
        - containerPort: 8080
          protocol: TCP
          name: "http"
        volumeMounts:
        - mountPath: /etc/serving-cert
          name: cert
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 30
          successThreshold: 1
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 30
          successThreshold: 1
      volumes:
      - name: cert
        secret:
          secretName: serving-cert-ne1444-test
